--- a/languages/ml/purescript/self.org
+++ b/languages/ml/purescript/self.org
@@ -10,6 +10,7 @@
 - https://github.com/purescript/documentation/blob/master/guides/Getting-Started.md
 - https://github.com/alpacaaa/elm-to-purescript-cheatsheet
 - article: Why You Should Use PureScript https://gist.github.com/paf31/adfd15fbb1ac8b99fc68be2c9aca8427
+- snippets https://x.com/purefunctor/media
 
 - libraries
   - https://github.com/passy/awesome-purescript
